1.位操作 2.通道分离和合并 3.色彩空间转换 4.像素统计、均值、方差

--- a/openCV_study/openCV_study.vcxproj
+++ b/openCV_study/openCV_study.vcxproj
@@ -116,6 +116,10 @@
     <ClCompile Include="004.cpp" />
     <ClCompile Include="005.cpp" />
     <ClCompile Include="006.cpp" />
+    <ClCompile Include="007.cpp" />
+    <ClCompile Include="008.cpp" />
+    <ClCompile Include="009.cpp" />
+    <ClCompile Include="010.cpp" />
     <ClCompile Include="imageTransform.cpp" />
     <ClCompile Include="openCVstudy.cpp" />
   </ItemGroup>
