--- a/openCV_study/openCV_study.vcxproj.filters
+++ b/openCV_study/openCV_study.vcxproj.filters
@@ -45,6 +45,18 @@
     <ClCompile Include="imageTransform.cpp">
       <Filter>源文件\Test</Filter>
     </ClCompile>
+    <ClCompile Include="007.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
+    <ClCompile Include="008.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
+    <ClCompile Include="009.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
+    <ClCompile Include="010.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="study_content.h">
