--- a/openCV_study/openCV_study.vcxproj
+++ b/openCV_study/openCV_study.vcxproj
@@ -120,6 +120,8 @@
     <ClCompile Include="008.cpp" />
     <ClCompile Include="009.cpp" />
     <ClCompile Include="010.cpp" />
+    <ClCompile Include="011.cpp" />
+    <ClCompile Include="012.cpp" />
     <ClCompile Include="imageTransform.cpp" />
     <ClCompile Include="openCVstudy.cpp" />
   </ItemGroup>
