--- a/openCV_study/openCV_study.vcxproj
+++ b/openCV_study/openCV_study.vcxproj
@@ -122,6 +122,10 @@
     <ClCompile Include="010.cpp" />
     <ClCompile Include="011.cpp" />
     <ClCompile Include="012.cpp" />
+    <ClCompile Include="013.cpp" />
+    <ClCompile Include="014.cpp" />
+    <ClCompile Include="015.cpp" />
+    <ClCompile Include="016.cpp" />
     <ClCompile Include="imageTransform.cpp" />
     <ClCompile Include="openCVstudy.cpp" />
   </ItemGroup>
