1.直方图 2.直方图均衡

--- a/openCV_study/openCV_study.vcxproj.filters
+++ b/openCV_study/openCV_study.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="016.cpp">
       <Filter>源文件\StudyContent</Filter>
     </ClCompile>
+    <ClCompile Include="017.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
+    <ClCompile Include="018.cpp">
+      <Filter>源文件\StudyContent</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="study_content.h">
