--- a/openCV_study/openCV_study.vcxproj
+++ b/openCV_study/openCV_study.vcxproj
@@ -126,6 +126,8 @@
     <ClCompile Include="014.cpp" />
     <ClCompile Include="015.cpp" />
     <ClCompile Include="016.cpp" />
+    <ClCompile Include="017.cpp" />
+    <ClCompile Include="018.cpp" />
     <ClCompile Include="imageTransform.cpp" />
     <ClCompile Include="openCVstudy.cpp" />
   </ItemGroup>
